--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     </head>
 
     <body>
-        
+        <header>
+            <h1 lang="en">Save the Turtles</h1>
+            <p>Salve as tartarugas, salve o planeta: sua doação faz a diferença.</p>
+            <nav role="navigation">
+                <ul>
+                    <li><a href="#top">Início</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Doações</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <body>
+            <main>
+                <h2>Tartarugas e a Poluição Plástica</h2>
+                <p>Confira esse vídeo da Academia Australiana de Ciências para entender o impacto da poluição dos oceanos na vida das tartarugas marinhas.</p>
+                <figure>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <figcaption>O vídeo mostra como o plástico despejado nos oceanos causa a morte de mais de mil tartarugas marinhas por ano.</figcaption>
+                </figure>
+            </main>
+        </body>
     </body>
 </html>
