--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
                     <p>Confira esse vídeo da Academia Australiana de Ciências para entender o impacto da poluição dos oceanos na vida das tartarugas marinhas.</p>
                     <figure>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <figcaption>O vídeo mostra como o plástico despejado nos oceanos causa a morte de mais de mil tartarugas marinhas por ano. Estima-se que mais de 50% das tartarugas marinhas já consumiram plástico em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</figcaption>
+                        <br>
+                        <cite> <!--Citando o autor do vídeo-->
+                            <span lang="en">Australian Academy of Science.</span> (2018, 13 de Setembro). <span lang="en">Turtles and plastic pollution</span> [Vídeo]. YouTube. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience</a>
+                        </cite>
+                        <figcaption>
+                            <p>O vídeo mostra como o plástico despejado nos oceanos causa a morte de mais de mil tartarugas marinhas por ano. Estima-se que mais de 50% das tartarugas marinhas já consumiram plástico em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
+                        </figcaption>
                     </figure>
                 </section>
 
@@ -48,6 +54,10 @@
                     </form>
                 </section>
             </main>
+
+            <footer>
+                <p lang="en">Save the Turtles &copy; 2023, by Gustavo Mazurkiewitz</p>
+            </footer>
         </body>
     </body>
 </html>
