Rodapé e informações de contato

--- a/index.html
+++ b/index.html
@@ -50,13 +50,20 @@
                         <label for="donation-amount">Valor da doação: R$:</label>
                         <input type="number" name="donation-amount" id="donation-amount" placeholder="00,00">
                         <br>
+                        <label for="message">Mensagem (opcional): </label>
+                        <textarea id="message" name="message"></textarea>
+                        <br>
                         <input type="submit" value="Confirmar">
                     </form>
                 </section>
             </main>
 
             <footer>
-                <p lang="en">Save the Turtles &copy; 2023, by Gustavo Mazurkiewitz</p>
+                <p lang="en">Save the Turtles &copy; 2023</p>
+                <address>
+                    <p>Por: <a href="mailto:gmazurkiewitz@gmail.com">Gustavo Mazurkiewitz</a></p>
+                    <p>Telefone para contato: <a href="https://wa.me/5551997775860">+55 51 99777-5960</a></p>
+                </address>
             </footer>
         </body>
     </body>
