Estilização do cabeçalho

--- a/html/index.html
+++ b/html/index.html
@@ -3,19 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/typography.css">
         <title lang="en">Save the Turtles</title>
     </head>
 
     <body>
-        <header>
+        <header role="banner">
             <h1 lang="en">Save the Turtles</h1>
             <p>Salve as tartarugas, salve o planeta: sua doação faz a diferença.</p>
             <nav role="navigation">
-                <ul>
-                    <li><a href="#top">Início</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#donations">Doações</a></li>
-                    <li><a href="#">Contato</a></li>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#top">Início</a></li>
+                    <li class="menu-item"><a href="#">Sobre</a></li>
+                    <li class="menu-item"><a href="#donations">Doações</a></li>
+                    <li class="menu-item"><a href="#">Contato</a></li>
                 </ul>
             </nav>
         </header>
