--- a/html/index.html
+++ b/html/index.html
@@ -10,28 +10,30 @@
 
     <body>
         <header role="banner">
-            <h1 lang="en">Save the Turtles</h1>
-            <p>Salve as tartarugas, salve o planeta: sua doação faz a diferença.</p>
+            <div class="header-text">
+                <h1 lang="en">Save the Turtles</h1>
+                <p>Salve as tartarugas, salve o planeta: <strong>sua doação faz a diferença.</strong></p>
+            </div>
             <nav role="navigation">
                 <ul class="menu">
                     <li class="menu-item"><a href="#top">Início</a></li>
-                    <li class="menu-item"><a href="#">Sobre</a></li>
+                    <li class="menu-item"><a href="#cause">Causa</a></li>
                     <li class="menu-item"><a href="#donations">Doações</a></li>
-                    <li class="menu-item"><a href="#">Contato</a></li>
+                    <li class="menu-item"><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
         </header>
 
         <body>
             <main>
-                <section>
+                <section id="cause">
                     <h2>Tartarugas e a Poluição Plástica</h2>
                     <p>Confira esse vídeo da Academia Australiana de Ciências para entender o impacto da poluição dos oceanos na vida das tartarugas marinhas.</p>
                     <figure>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <br>
                         <cite> <!--Citando o autor do vídeo-->
-                            <span lang="en">Australian Academy of Science.</span> (2018, 13 de Setembro). <span lang="en">Turtles and plastic pollution</span> [Vídeo]. YouTube. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience</a>
+                            <span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).
                         </cite>
                         <figcaption>
                             <p>O vídeo mostra como o plástico despejado nos oceanos causa a morte de mais de mil tartarugas marinhas por ano. Estima-se que mais de 50% das tartarugas marinhas já consumiram plástico em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
@@ -60,7 +62,7 @@
                 </section>
             </main>
 
-            <footer>
+            <footer id="contact">
                 <p lang="en">Save the Turtles &copy; 2023</p>
                 <address>
                     <p>Por: <a href="mailto:gmazurkiewitz@gmail.com">Gustavo Mazurkiewitz</a></p>
