--- a/html/index.html
+++ b/html/index.html
@@ -22,43 +22,45 @@
             </nav>
         </header>
 
-        <main>
-            <section id="cause">
-                <h2>Tartarugas e a Poluição Plástica</h2>
-                <p>Confira esse vídeo da Academia Australiana de Ciências para entender o impacto da poluição dos oceanos na vida das tartarugas marinhas.</p>
-                <figure>
-                    <iframe height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <br>
-                    <cite> <!--Citando o autor do vídeo-->
-                        <span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).
-                    </cite>
-                    <figcaption>
-                        <p>O vídeo mostra como o <strong>plástico</strong> despejado nos oceanos causa a morte de <strong>mais de mil tartarugas</strong> marinhas por ano. Estima-se que mais de <strong>50% das tartarugas marinhas já consumiram plástico</strong> em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
-                    </figcaption>
-                </figure>
-            </section>
+        <div class="container">
+            <main>
+                <section id="cause">
+                    <h2>Tartarugas e a Poluição Plástica</h2>
+                    <p>Confira esse vídeo da Academia Australiana de Ciências para entender o impacto da poluição dos oceanos na vida das tartarugas marinhas.</p>
+                    <figure>
+                        <iframe height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <br>
+                        <cite> <!--Citando o autor do vídeo-->
+                            <span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).
+                        </cite>
+                        <figcaption>
+                            <p>O vídeo mostra como o <strong>plástico</strong> despejado nos oceanos causa a morte de <strong>mais de mil tartarugas</strong> marinhas por ano. Estima-se que mais de <strong>50% das tartarugas marinhas já consumiram plástico</strong> em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
+                        </figcaption>
+                    </figure>
+                </section>
 
-            <section id="donations">
-                <h2>Cada centavo faz a diferença</h2>
-                <p>Ajude-nos a proteger as tartarugas marinhas com uma doação em qualquer valor.</p>
-                <form>
-                    <label for="name">Nome:</label>
-                    <input type="text" name="name" id="name" placeholder="Seu nome">
-                    <br>
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email" placeholder="seu-email@exemplo.com">
-                    <br>
-                    <label for="donation-amount">Valor da doação:</label>
-                    <input type="number" name="donation-amount" id="donation-amount" placeholder="R$00,00">
-                    <br>
-                    <label for="message">Deixe uma mensagem (opcional): </label>
-                    <br>
-                    <textarea id="message" name="message" rows="8"></textarea>
-                    <br>
-                    <input type="submit" value="Confirmar" id="submit">
-                </form>
-            </section>
-        </main>
+                <section id="donations">
+                    <h2>Cada centavo faz a diferença</h2>
+                    <p>Ajude-nos a proteger as tartarugas marinhas com uma doação em qualquer valor.</p>
+                    <form>
+                        <label for="name">Nome:</label>
+                        <input type="text" name="name" id="name" placeholder="Seu nome">
+                        <br>
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email" placeholder="seu-email@exemplo.com">
+                        <br>
+                        <label for="donation-amount">Valor da doação:</label>
+                        <input type="text" name="donation-amount" id="donation-amount" placeholder="00,00" value="R$: ">
+                        <br>
+                        <label for="message">Deixe uma mensagem (opcional): </label>
+                        <br>
+                        <textarea id="message" name="message" rows="8"></textarea>
+                        <br>
+                        <input type="submit" value="Confirmar" id="submit">
+                    </form>
+                </section>
+            </main>
+        </div>
 
         <footer id="contact">
             <p lang="en">Save the Turtles &copy; 2023</p>
