Adicionada mais uma fonte para os títulos e refazendo o layout para telas pequenas

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
                         <iframe height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <br>
                         <cite> <!--Citando o autor do vídeo-->
-                            <p><span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).</p>
+                            <p class="cite-text"><span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).</p>
                         </cite>
                         <figcaption>
                             <p>O vídeo mostra como o <strong>plástico</strong> despejado nos oceanos causa a morte de <strong>mais de mil tartarugas</strong> marinhas por ano. Estima-se que mais de <strong>50% das tartarugas marinhas já consumiram plástico</strong> em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
@@ -46,7 +46,7 @@
                 <form>
                     <h2>Cada centavo faz a diferença</h2>
                     <p>Ajude-nos a proteger as tartarugas marinhas com uma doação em qualquer valor.</p>
-                    <label for="name">Nome:</label>
+                    <label style="margin-top: 1.5rem;" for="name">Nome:</label>
                     <input type="text" name="name" id="name" placeholder="Seu nome">
                     <br>
                     <label for="email">Email:</label>
