Arrumando algumas margens e a estilização do formulário

--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <footer id="contact">
-            <p lang="en">Save the Turtles &copy; 2023</p>
+            <h2 lang="en">Save the Turtles &copy; 2023</h2>
             <address>
                 <p>Por: <a href="mailto:gmazurkiewitz@gmail.com">Gustavo Mazurkiewitz</a></p>
                 <p>Telefone para contato: <a href="https://wa.me/5551997775860">+55 51 99777-5960</a></p>
