--- a/html/index.html
+++ b/html/index.html
@@ -32,11 +32,9 @@
                     <figure>
                         <iframe height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <br>
-                        <cite> <!--Citando o autor do vídeo-->
-                            <p class="cite-text"><span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).</p>
-                        </cite>
+                        <p class="author-reference"><span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).</p>
                         <figcaption>
-                            <p>O vídeo mostra como o <strong>plástico</strong> despejado nos oceanos causa a morte de <strong>mais de mil tartarugas</strong> marinhas por ano. Estima-se que mais de <strong>50% das tartarugas marinhas já consumiram plástico</strong> em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
+                            <p>O vídeo mostra como o <strong>plástico</strong> despejado nos oceanos causa a <strong>morte</strong> de <strong>mais de mil tartarugas</strong> marinhas por ano. Estima-se que mais de <strong>50% das tartarugas marinhas já consumiram plástico</strong> em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
                         </figcaption>
                     </figure>
                 </section>
