Ajustando o rodapé e as margens dos parágrafos

--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,8 @@
                             <p>O vídeo mostra como o <strong>plástico</strong> despejado nos oceanos causa a <strong>morte</strong> de <strong>mais de mil tartarugas</strong> marinhas por ano. Estima-se que mais de <strong>50% das tartarugas marinhas já consumiram plástico</strong> em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
                         </figcaption>
                     </figure>
+
+                    <p>Nosso objetivo é preservar a vida das tartarugas marinhas e o futuro do nosso planeta. Para isso, precisamos da sua ajuda.</p>
                 </section>
             </main>
 
@@ -62,9 +64,9 @@
             </section>
         </div>
 
-        <footer id="contact">
-            <h2 lang="en">Save the Turtles &copy; 2023</h2>
-            <address>
+        <footer role="contentinfo">
+            <h3 lang="en">Save the Turtles &copy; 2023</h3>
+            <address id="contact">
                 <p>Por: <a href="mailto:gmazurkiewitz@gmail.com">Gustavo Mazurkiewitz</a></p>
                 <p>Telefone para contato: <a href="https://wa.me/5551997775860">+55 51 99777-5960</a></p>
             </address>
