--- a/html/index.html
+++ b/html/index.html
@@ -25,24 +25,22 @@
         </header>
 
         <div class="container">
-            <main>
-                <section id="cause">
-                    <h2>Tartarugas e a Poluição Plástica</h2>
-                    <p>Confira esse vídeo da Academia Australiana de Ciências para entender o impacto da poluição dos oceanos na vida das tartarugas marinhas.</p>
-                    <figure>
-                        <iframe height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <br>
-                        <p class="author-reference"><span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).</p>
-                        <figcaption>
-                            <p>O vídeo mostra como o <strong>plástico</strong> despejado nos oceanos causa a <strong>morte</strong> de <strong>mais de mil tartarugas</strong> marinhas por ano. Estima-se que mais de <strong>50% das tartarugas marinhas já consumiram plástico</strong> em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
-                        </figcaption>
-                    </figure>
+            <main id="cause" class="container-item">
+                <h2>Tartarugas e a Poluição Plástica</h2>
+                <p>Confira esse vídeo da Academia Australiana de Ciências para entender o impacto da poluição dos oceanos na vida das tartarugas marinhas.</p>
+                <figure>
+                    <iframe height="315" src="https://www.youtube.com/embed/JIklRSR0ov4?si=ZnygT5PQrPn6FVa8" title="Tartarugas e a Poluição Plástica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <br>
+                    <p class="author-reference"><span lang="en">Australian Academy of Science. <a href="https://www.youtube.com/watch?v=JIklRSR0ov4&ab_channel=AustralianAcademyofScience">Turtles and plastic pollution.</a></span> YouTube. (2018, 13 de Setembro).</p>
+                    <figcaption>
+                        <p>O vídeo mostra como o <strong>plástico</strong> despejado nos oceanos causa a <strong>morte</strong> de <strong>mais de mil tartarugas</strong> marinhas por ano. Estima-se que mais de <strong>50% das tartarugas marinhas já consumiram plástico</strong> em suas vidas. Em algumas regiões, esse número pode chegar a mais de 90%.</p>
+                    </figcaption>
+                </figure>
 
-                    <p>Nosso objetivo é preservar a vida das tartarugas marinhas e o futuro do nosso planeta. Para isso, precisamos da sua ajuda.</p>
-                </section>
+                <p>Nosso objetivo é preservar a vida das tartarugas marinhas e o futuro do nosso planeta. Para isso, precisamos da sua ajuda.</p>
             </main>
 
-            <section id="donations">
+            <section id="donations" class="container-item">
                 <form>
                     <h2>Cada centavo faz a diferença</h2>
                     <p>Ajude-nos a proteger as tartarugas marinhas com uma doação em qualquer valor.</p>
